Todo lo de hoy rehecho tras colapso de git